--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4,11 +4,20 @@
 
 @layer base {
   a {
-    text-decoration: underline;
+    @apply border-b-2 border-transparent no-underline;
   }
 
-  a,
+  a:hover {
+    @apply bg-yellow-100 border-b-2 border-yellow-200;
+  }
+
   p {
     @apply text-lg;
+  }
+}
+
+@layer components {
+  .readingListItem {
+    @apply p-4 my-10 border-t-8 border-yellow-200 shadow-lg;
   }
 }
