--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -13,7 +13,7 @@ section: post
     </div>
     <!-- End of h-entry things -->
 
-    <h2 class="p-name">{{ title }}</h2>
+    <h2 class="-mt-2 p-name">{{ title }}</h2>
     <section class="">
         <p class="my-1">
             <span>Published:</span>
