--- a/src/_includes/macro_components/readingListItem.njk
+++ b/src/_includes/macro_components/readingListItem.njk
@@ -1,6 +1,6 @@
 {% macro readingListItem(url, title, excerpt, publication) %}
     <section class="readingListItem">
-        <p class="">
+        <p class="leading-tight">
             <a href="{{ url }}">
                 {{ title }}
             </a>
