--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="mt-16 border-t-8">
+<footer class="mt-16 border-t-8 border-yellow-200">
 
     <ul class="leading-loose list-none">
 
