--- a/src/_includes/partials/allPosts.njk
+++ b/src/_includes/partials/allPosts.njk
@@ -1,6 +1,6 @@
 {% from "../macro_components/postEntry.njk" import postEntry %}
 
-<div class="mt-8 prose">
+<div class="prose">
 	<h2 class="-mb-4">All blogposts</h2>
 	{% set year = "" %}
 	{% for post in postslist %}
