nav fixes, favicon colour change

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,6 +1,6 @@
 <header class="">
     <h1 class="text-4xl">
-        <a class="text-4xl no-underline border-b-8 border-yellow-200 hover:border-transparent h-card" rel="me" href="/"
+        <a class="text-4xl leading-relaxed no-underline border-b-8 border-yellow-200 hover:border-transparent h-card" rel="me" href="/"
         {% if page.url == "/" %}
             aria-current="page"
         {% endif %}>
