--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -1,23 +1,18 @@
 {% if navigation.items %}
 
-    <nav class="">
+    <nav class="flex flex-wrap my-8 list-none gap-y-4 sm:w-2/4">
+        {% for nav in navigation.items %}
+            <a href="{{ nav.url | url }}" {% if section == nav.section %} aria-current="page"{% endif %} class="w-1/3 min-w-min p-1 text-lg no-underline border-b-2 border-transparent hover:border-yellow-200 hover:bg-yellow-100 hover:bg-opacity-20 {% if section == nav.section %} currentPage
+           {% endif %}">
+                {{ nav.text }}
 
-        <ul class="grid grid-cols-3 my-8 list-none gap-y-4 gap-x-2 sm:w-2/4">
-            {% for nav in navigation.items %}
-                <a href="{{ nav.url | url }}" {% if section == nav.section %} aria-current="page"{% endif %} class="no-underline border-b-2 border-transparent hover:border-yellow-200 hover:bg-yellow-100 hover:bg-opacity-20">
-                    <li class="{% if section == nav.section %} currentPage
-           {% endif %} text-lg p-1">
-                        {{ nav.text }}
+                {# {% if nav.svgB64 %}
+                    {{nav.svgB64 | decodeBase64 | safe }}
+                {% endif %} #}
+            </a>
 
-                        {% if nav.svgB64 %}
-                            {{nav.svgB64 | decodeBase64 | safe }}
-                        {% endif %}
+        {% endfor %}
 
-                    </li>
-                </a>
-            {% endfor %}
-
-        </ul>
     </nav>
 
     {% endif%}
