--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -86,6 +86,6 @@
     }
   </style> #}
 
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css" media="print" onload="this.media='all'; this.onload=null;">
 
 </head>
