--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    {% include "partials/head.njk" %}
+    <header class="">
+        {% include "partials/head.njk" %}
+    </header>
 
     <body class="container grid h-screen max-w-4xl px-4 pt-4 mx-auto grid-cols-full grid-rows-auto-1-auto">
         {% include "partials/header.njk" %}
@@ -12,25 +13,8 @@
 
         {% include "partials/footer.njk" %}
 
-        {# {% set js %}
-        {% include "../../assets/js/main.js" %}
-        {% endset %}
+        {# <script type="module" src="/scripts/main.js" defer></script> #}
 
-        <script>
-
-            {{ js | safe }}
-        </script> #}
-
-        <script src="/scripts/main.js"></script>
-
-        {# {% set js %}
-        {% include "/scripts/main.js" %}
-        {% endset %}
-
-        <script>
-
-            {{ js | safe }}
-        </script> #}
     </body>
 
 </html>
