--- a/src/_includes/layouts/raindrop-links.njk
+++ b/src/_includes/layouts/raindrop-links.njk
@@ -4,8 +4,8 @@ section: rss-likes
 ---
 {% from "../macro_components/readingListItem.njk" import readingListItem %}
 
-<p>
-     These are the {{ raindropLinks | length }} links that I've saved on <a href="https://raindrop.io">Raindrop, my bookmarking service</a>.
+<p class=" dark:text-trueGray-50">
+     These are the {{ raindropLinks | length }} links that I've saved on <a href="https://raindrop.io" class="dark:text-trueGray-50 dark:hover:text-gray-800">Raindrop, my bookmarking service</a>.
     </p>
 
 <div class="">
