--- a/src/_includes/macro_components/readingListItem.njk
+++ b/src/_includes/macro_components/readingListItem.njk
@@ -1,7 +1,7 @@
 {% macro readingListItem(url, title, excerpt, publication) %}
     <section class="readingListItem">
         <p class="leading-tight">
-            <a href="{{ url }}">
+            <a href="{{ url }}" class="dark:text-trueGray-50 dark:hover:text-gray-800">
                 {{ title }}
             </a>
 
