--- a/src/_includes/layouts/feedbin-stars.njk
+++ b/src/_includes/layouts/feedbin-stars.njk
@@ -4,8 +4,8 @@ section: feedbin-stars
 ---
 {% from "../macro_components/readingListItem.njk" import readingListItem %}
 
-<p>
-     These are the {{ feedbinLikes | length }} articles that I've starred on <a href="https://feedbin.com">Feedbin, my RSS reader</a>.
+<p class=" dark:text-trueGray-50">
+     These are the {{ feedbinLikes | length }} articles that I've starred on <a href="https://feedbin.com" class=" dark:text-trueGray-50 dark:hover:text-gray-800">Feedbin, my RSS reader</a>.
     </p>
 
 <div>
