--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 section: home
 ---
-<section class="prose">
+<section class="prose dark:text-trueGray-50">
     <p>
         My personal site
     </p>
