--- a/src/_includes/macro_components/postEntry.njk
+++ b/src/_includes/macro_components/postEntry.njk
@@ -1,8 +1,8 @@
 {% macro postEntry(date, url, title) %}
-    <section class="p-8 my-10 border-t-8 border-yellow-200 shadow-lg">
-        <p class="m-0 text-base">{{ date }}</p>
-        <h3 class="mt-1">
-            <a href="{{ url }}" title= "{{ title }}">{{ title }}</a>
+    <section class="p-8 my-10 border-t-8 border-yellow-200 shadow-lg dark:bg-gray-800">
+        <p class="m-0 text-base dark:text-trueGray-300">{{ date }}</p>
+        <h3 class="mt-1 dark:text-trueGray-50">
+            <a href="{{ url }}" title= "{{ title }}" class="dark:text-trueGray-50 dark:hover:text-gray-800">{{ title }}</a>
         </h3>
     </section>
 {% endmacro %}
