--- a/src/_includes/partials/allPosts.njk
+++ b/src/_includes/partials/allPosts.njk
@@ -1,12 +1,12 @@
 {% from "../macro_components/postEntry.njk" import postEntry %}
 
 <div class="prose">
-	<h2 class="-mb-4">All blogposts</h2>
+	<h2 class="-mb-4 dark:text-trueGray-50">All blogposts</h2>
 	{% set year = "" %}
 	{% for post in postslist %}
 		{% set postYear = post.date | getYear %}
 		{% if year != postYear %}
-			<p class="mt-10 -mb-6 text-lg font-bold">{{ postYear }}</p>
+			<p class="mt-10 -mb-6 text-lg font-bold dark:text-trueGray-50">{{ postYear }}</p>
 			{% set year = postYear %}
 		{% endif %}
 
