--- a/src/_includes/partials/last4posts.njk
+++ b/src/_includes/partials/last4posts.njk
@@ -1,7 +1,7 @@
 {% from "../macro_components/postEntry.njk" import postEntry %}
 
-<div class="mt-8 prose">
-    <h2 class="-mb-4">Latest posts</h2>
+<div class="mt-8 prose dark:text-trueGray-50">
+    <h2 class="-mb-4 dark:text-trueGray-50">Latest posts</h2>
 
     {% set year = "" %}
     {% for i in range(0, 4) %}
@@ -15,7 +15,7 @@
         {{ postEntry(date=postDate, url=postURL, title=postTitle) }}
 
     {% endfor %}
-    <p class="">
-        <a href="/all-posts" class="font-semibold">See all posts</a>
+    <p>
+        <a href="/all-posts" class="font-semibold dark:text-trueGray-50 dark:hover:text-gray-800">See all posts</a>
     </p>
 </div>
