--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -87,5 +87,5 @@
   </style> #}
 
   <link rel="stylesheet" href="/styles/styles.css">
-
+<link rel='alternate' type='application/rss+xml' title="RSS feed for Ed Johnson-Williams’ blog" href='/feed.xml' />
 </head>
