--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,11 +2,11 @@
 layout: layouts/base.njk
 section: home
 ---
-<section class="prose dark:text-trueGray-50">
-    <p>
+<section class="prose ">
+  <p>
         My personal site
     </p>
-    <p class="mt-2">
+  <p class="mt-2">
         Some tech, some politics, some shapenote music
     </p>
 </section>
