--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include "partials/head.njk" %}
-    <header class="">
-        {% include "partials/header.njk" %}
-    </header>
+  {% include "partials/head.njk" %}
+  <header class="">
+    {% include "partials/header.njk" %}
+  </header>
 
-    <body class="container grid h-screen max-w-4xl px-4 pt-4 mx-auto grid-cols-full grid-rows-auto-1-auto dark:bg-trueGray-800 dark:text-trueGray-50">
+  <body class="container grid h-screen max-w-4xl px-4 pt-4 mx-auto grid-cols-full grid-rows-auto-1-auto  ">
 
-        <main class="dark:bg-trueGray-800 dark:text-trueGray-50">
+    <main class=" ">
             {{ content | safe }}
         </main>
 
