--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -3,41 +3,41 @@ layout: layouts/base.njk
 section: post
 ---
 
-<article class="prose h-entry dark:text-trueGray-50">
+<article class="prose h-entry ">
 
-    <!-- h-entry things -->
-    <div class="hidden">
-        <a href="{{ page.url }}"></a>
-        <time class="dt-published">{{ page.date | ISO_8601_Date }}</time>
-        <a rel="author" href="https://edjohnsonwilliams.co.uk">Ed Johnson-Williams</a>
-    </div>
-    <!-- End of h-entry things -->
+  <!-- h-entry things -->
+  <div class="hidden">
+    <a href="{{ page.url }}"></a>
+    <time class="dt-published">{{ page.date | ISO_8601_Date }}</time>
+    <a rel="author" href="https://edjohnsonwilliams.co.uk">Ed Johnson-Williams</a>
+  </div>
+  <!-- End of h-entry things -->
 
-    <h2 class="-mt-0 p-name dark:text-trueGray-50">{{ title }}</h2>
-    <section class="">
-        <p class="my-1 dark:text-trueGray-300">
-            <span>Published:</span>
-            {{ page.date | readableDate }}</p>
-        <p class="my-1 dark:text-trueGray-300">
-            <span>Reading time:</span>
-            {{ content | readingTime }}
-        </p>
-        {% if tags.length > 0 and tags[0] != "post" %}
+  <h2 class="-mt-0 p-name ">{{ title }}</h2>
+  <section class="">
+    <p class="my-1 ">
+      <span>Published:</span>
+      {{ page.date | readableDate }}</p>
+    <p class="my-1 ">
+      <span>Reading time:</span>
+      {{ content | readingTime }}
+    </p>
+    {% if tags.length > 0 and tags[0] != "post" %}
 
-            <p class="my-1 dark:text-trueGray-300">
-                <span>Tagged as:</span>
-                {% for tag in tags %}
-                    <a href="/tags/{{ tag | slug }}">{{ tag | title }}</a>
-                    {% if loop.last == false %}
+      <p class="my-1 ">
+        <span>Tagged as:</span>
+        {% for tag in tags %}
+          <a href="/tags/{{ tag | slug }}">{{ tag | title }}</a>
+          {% if loop.last == false %}
                         /
                     {% endif %}
-                {% endfor %}
-            </p>
-            {% endif%}
+        {% endfor %}
+      </p>
+      {% endif%}
 
-        </section>
-        <div class="e-content dark:bg-trueGray-800 dark:text-trueGray-50">
-            {{ content | safe }}
-        </div>
+    </section>
+    <div class="e-content  ">
+      {{ content | safe }}
+    </div>
 
-    </article>
+  </article>
