--- a/src/_includes/layouts/reading-list.njk
+++ b/src/_includes/layouts/reading-list.njk
@@ -4,17 +4,17 @@ section: reading-list
 ---
 
 <p class="">See what I've saved in Pocket, Raindrop, and Feedbin.</p>
-<h3 class="dark:text-trueGray-50">
+<h3 class="">
         Latest 3 Pocket articles
     </h3>
 
 {% for i in range(0, 3) %}
 
-    <section class="readingListItem">
+  <section class="readingListItem">
 
-        <p class="dark:text-trueGray-50">
-            <a href="{{ readingList[i].resolved_url }}"
-                class="dark:text-trueGray-50 dark:hover:text-gray-800">{{ readingList[i].resolved_title if readingList[i].resolved_title else readingList[i].resolved_url }}</a>
+    <p class="">
+      <a href="{{ readingList[i].resolved_url }}"
+                class=" ">{{ readingList[i].resolved_title if readingList[i].resolved_title else readingList[i].resolved_url }}</a>
             {% if readingList
             [i].authors %}
             by {% for authorID, authorDetails in readingList
@@ -30,18 +30,18 @@ section: reading-list
 {% endfor %}
 
 <p class="-mt-4">
-<a href="/pocket-articles" class="font-semibold dark:text-trueGray-50 dark:hover:text-gray-800">See all Pocket links</a>
-</p>
+        <a href="/pocket-articles" class="font-semibold  ">See all Pocket links</a>
+      </p>
 
-<h3 class="mt-12 dark:text-trueGray-50">
+      <h3 class="mt-12 ">
         Latest 3 Raindrop links
     </h3>
 
-{% for i in range(0, 3) %}
-<section class="readingListItem">
+      {% for i in range(0, 3) %}
+        <section class="readingListItem">
 
-    <p>
-        <a href="{{ raindropLinks[i].url }}" class=" dark:text-trueGray-50 dark:hover:text-gray-800">
+          <p>
+            <a href="{{ raindropLinks[i].url }}" class="  ">
             {{ raindropLinks[i].title }}
         </a>
     </p>
@@ -52,17 +52,17 @@ section: reading-list
 {% endfor %}
 
 <p class="-mt-4">
-<a href="/raindrop-links" class="font-semibold dark:text-trueGray-50 dark:hover:text-gray-800">See all Raindrop links</a>
-</p>
+              <a href="/raindrop-links" class="font-semibold  ">See all Raindrop links</a>
+            </p>
 
-<h3 class="mt-12 dark:text-trueGray-50">
+            <h3 class="mt-12 ">
         Latest 3 Feedbin stars
     </h3>
 
-{% for i in range(0, 3) %}
-<section class="readingListItem">
-    <p>
-        <a href="{{ feedbinLikes[i].url }}" class="dark:text-trueGray-50 dark:hover:text-gray-800">
+            {% for i in range(0, 3) %}
+              <section class="readingListItem">
+                <p>
+                  <a href="{{ feedbinLikes[i].url }}" class=" ">
             {{ feedbinLikes[i].title }}
         </a>
     </p>
@@ -70,5 +70,5 @@ section: reading-list
 </section>
 {% endfor %}
 <p class="-mt-4">
-<a href="/feedbin-stars" class="font-semibold dark:hover:text-gray-800">See all Feedbin stars</a>
-</p>
+                    <a href="/feedbin-stars" class="font-semibold ">See all Feedbin stars</a>
+                  </p>
