--- a/src/_includes/partials/allPosts.njk
+++ b/src/_includes/partials/allPosts.njk
@@ -1,22 +1,22 @@
 {% from "../macro_components/postEntry.njk" import postEntry %}
 
 <div class="prose">
-	<h2 class="-mb-4 dark:text-trueGray-50">All blogposts</h2>
-	{% set year = "" %}
-	{% for post in postslist %}
-		{% set postYear = post.date | getYear %}
-		{% if year != postYear %}
-			<p class="mt-10 -mb-6 text-lg font-bold dark:text-trueGray-50">{{ postYear }}</p>
-			{% set year = postYear %}
-		{% endif %}
+  <h2 class="-mb-4 ">All blogposts</h2>
+  {% set year = "" %}
+  {% for post in postslist %}
+    {% set postYear = post.date | getYear %}
+    {% if year != postYear %}
+      <p class="mt-10 -mb-6 text-lg font-bold ">{{ postYear }}</p>
+      {% set year = postYear %}
+    {% endif %}
 
-		{% set postDate = post.date | readableDate %}
+    {% set postDate = post.date | readableDate %}
 
-		{% set postURL = post.url | url %}
+    {% set postURL = post.url | url %}
 
-		{% set postTitle = post.data.title %}
+    {% set postTitle = post.data.title %}
 
-		{{ postEntry(date=postDate, url=postURL, title=postTitle) }}
+    {{ postEntry(date=postDate, url=postURL, title=postTitle) }}
 
-	{% endfor %}
+  {% endfor %}
 </div>
