--- a/src/pages/feed.xml.njk
+++ b/src/pages/feed.xml.njk
@@ -24,8 +24,9 @@ eleventyExcludeFromCollections: true
 
 			<content type="html">
 				{# <![CDATA[ #}
-        {{ post.templateContent | markdownify | safe | htmlToAbsoluteUrls(absolutePostUrl) }}
-      {# ]]> #}
+				{# {{ post.templateContent | markdownify | safe | htmlToAbsoluteUrls(absolutePostUrl) }} #}
+				{{ post.templateContent  }}
+				{# ]]> #}
 			</content>
 		</entry>
 	{% endfor %}
