--- a/src/_includes/layouts/raindrop-links.njk
+++ b/src/_includes/layouts/raindrop-links.njk
@@ -8,7 +8,7 @@ section: rss-likes
      These are the {{ raindropLinks | length }} links that I've saved on <a href="https://raindrop.io" class=" ">Raindrop, my bookmarking service</a>.
     </p>
 
-<div class="">
+<div>
 
 {% for item in raindropLinks %}
 
