--- a/src/_includes/partials/allPosts.njk
+++ b/src/_includes/partials/allPosts.njk
@@ -1,6 +1,6 @@
 {% from "../macro_components/postEntry.njk" import postEntry %}
 
-<div class="prose">
+<div class="prose dark:prose-light">
   <h2 class="-mb-4 ">All blogposts</h2>
   {% set year = "" %}
   {% for post in postslist %}
