--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,32 +1,32 @@
-<footer class="mt-16 border-t-8 border-yellow-200 ">
+<footer class="mt-16 prose border-t-8 border-yellow-200 dark:prose-light">
 
-  <ul class="leading-loose list-none">
+  <div class="leading-loose list-none">
 
     {# {% if site.author.twitterUsername %}
-        <li class="">
+        <li>
           <a href="https://twitter.com/{{ site.author.twitterUsername }}" rel="me">Twitter</a>
         </li>
       {% endif %} #}
 
     {% if site.repository %}
-      <li class="my-2">
+      <p class="pl-0 my-2">
         <a href="https://github.com/{{ site.repository }}" class="underline">See the code for this site</a>
-      </li>
+      </p>
     {% endif %}
 
     {% if site.RSSFeed %}
-      <li class="my-2">
+      <p class="pl-0 my-2">
         <a href="/feed.xml" class="underline">See the RSS feed for this site</a>
-      </li>
+      </p>
     {% endif %}
 
     {% if site.sitemap %}
-      <li class="hidden">
+      <p class="hidden">
         <a href="/sitemap.xml">Sitemap</a>
-      </li>
+      </p>
 
     {% endif %}
-  </ul>
+  </div>
 
   {# {% if site.author.mastodonUsername %}
     <link rel="me" href="https://mastodon.social/{{ site.author.mastodonUsername}}">
@@ -34,11 +34,11 @@
 
   {% if site.contentLicence %}
 
-    <p class="mt-6 text-sm prose ">
+    <p class="mt-6 text-sm">
         Content on this website is licenced as
-        <a href="{{ site.contentLicence.link }}" class=" ">{{ site.contentLicence.text }}</a>. That means you can copy, adapt, and redistribute any content on this site for any purpose providing you give credit, provide a link to the licence, and indicate if you made changes.
+        <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>. That means you can copy, adapt, and redistribute any content on this site for any purpose providing you give credit, provide a link to the licence, and indicate if you made changes.
     </p>
 
-    {% endif %}
+  {% endif %}
 
 </footer>
