--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-<h1 class="text-4xl">
+<h1 class="text-4xl prose dark:prose-light">
     <a class="text-4xl leading-relaxed no-underline border-b-8 border-yellow-200 hover:border-transparent h-card" rel="me" href="/"
         {% if page.url == "/" %}
             aria-current="page"
